--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,6 +15,9 @@ jobs:
       - checkout
       - setup_remote_docker
       - run:
+          name: Auth to ECR
+          command: eval $(aws ecr get-login --no-include-email --region us-east-2)
+      - run:
           name: build, run integrations test, publish
           command: make docker-integration 
   publish:
@@ -24,6 +27,9 @@ jobs:
       - checkout
       - setup_remote_docker
       - run:
+          name: Auth to EKS
+          command: aws eks --region us-east-2 update-kubeconfig --name blizzard-demo
+      - run:
           name: publish docker container
           command: make docker-push
   deploy:
@@ -31,6 +37,9 @@ jobs:
       - image: sleyva97/build-image
     steps:
       - checkout
+      - run:
+          name: Auth to EKS
+          command: aws eks --region us-east-2 update-kubeconfig --name blizzard-demo
       - run:
           name: Deploy to kubenetes 
           command: make kubernetes-deployment
