Add an exponential backoff
* There is a possibility of
 the rolling update not replacing all pods
 as quickly resulting in a promotion of the service
 when parts of the underlyinf infrastructure are running old code.
 This makes sure a rollout is successful before promotion.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -44,6 +44,9 @@ jobs:
           name: Deploy to kubenetes 
           command: make kubernetes-deployment
       - run:
+          name: Wait for rollout to succeed
+          command: make rollout-wait
+      - run:
           name: Promote to active
           command: make promote-deployment
 
