--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,8 +6,17 @@ jobs:
     working_directory: /go/src/github.com/srleyva/date-api
     steps:
       - checkout
-      - run : |
-          go test ./... -v
+      - run:
+          name: "Create a temp directory for artifacts"
+          command: |
+            mkdir -p /tmp/artifacts
+      - run:
+          command: |
+            go test ./... -coverprofile=c.out
+            go tool cover -html=c.out -o coverage.html
+            mv coverage.html /tmp/artifacts
+      - store_artifacts:
+          path: /tmp/artifacts
   build-integration:
     docker:
       - image: sleyva97/build-image
